feat: ✨ add `authenticate-account` usecase
