# apps/server/src/modules/identity-and-access-mangement/domain/value-objects/password-hash.ts
@@ -1,3 +1,4 @@
+import { Password } from './password.js'
 import argon2 from 'argon2'
 import { Static, String } from 'runtypes'
 
@@ -5,6 +6,10 @@ const PasswordHash = String.withBrand('PasswordHash')
 type PasswordHash = Static<typeof PasswordHash>
 
 export async function createPasswordHash(password: string): Promise<PasswordHash> {
+	return password as PasswordHash
+}
+
+export async function hashPassword(password: string): Promise<PasswordHash> {
 	try {
 		const hashedPassword = await argon2.hash(password)
 		return hashedPassword as PasswordHash
@@ -18,9 +23,9 @@ export async function createPasswordHash(password: string): Promise<PasswordHash
  * @param hash
  * @param password
  */
-export async function comparePasswordHash(hash: PasswordHash, password: string): Promise<boolean> {
+export async function comparePasswordHash(hash: PasswordHash, password: Password): Promise<boolean> {
 	try {
-		return await argon2.verify(hash.valueOf(), password)
+		return await argon2.verify(hash, password)
 	} catch {
 		// Handle comparison error
 		throw new Error('Error comparing password hash')
